# einsum-experiment

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
src/einsum/: __init__.py  lib.py
tests/: test_einsum.py
